--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3"
 
 services:
   vote:
+    privileged: true
     build: ./vote
     command: python app.py
     volumes:
@@ -13,6 +14,7 @@ services:
       - back-tier
 
   result:
+    privileged: true
     build: ./result
     command: nodemon server.js
     volumes:
@@ -24,16 +26,26 @@ services:
       - front-tier
       - back-tier
 
+  joomla:
+    privileged: true
+    image: kuthz/joomla
+    ports:
+      - "80:80"
+    networks:
+      - front-tier
+      - back-tier
+
   worker:
+    privileged: true
     build:
       context: ./worker
     depends_on:
       - "redis"
-      - "db"
     networks:
       - back-tier
 
   redis:
+    privileged: true
     image: redis:alpine
     container_name: redis
     ports: ["6379"]
@@ -41,6 +53,7 @@ services:
       - back-tier
 
   db:
+    privileged: true
     image: postgres:9.4
     container_name: db
     volumes:
@@ -53,4 +66,14 @@ volumes:
 
 networks:
   front-tier:
+    driver_opts:
+      com.docker.network.bridge.enable_ip_masquerade: 'true'
+    ipam:
+      config:
+        - subnet: "172.18.0.0/16"
   back-tier:
+    driver_opts:
+      com.docker.network.bridge.enable_ip_masquerade: 'true'
+    ipam:
+      config:
+        - subnet: "172.19.0.0/16"
